Bug 76193 - systemd-nspawn: Freezes when switching --link-journal
Summary: systemd-nspawn: Freezes when switching --link-journal
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Djalal Harouni
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-15 08:22 UTC by Tobias Hunger
Modified: 2014-05-25 04:58 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Tobias Hunger 2014-03-15 08:22:57 UTC
Systemd-nspawn freezes when switching --link-journal settings.

Steps to reproduce:
1) Run "systemd-nspawn --directory=/some/dir --boot --link-journal=host"
2) Quit that VM (I used ^]^]^])
3) Run "systemd-nspawn --directory=/some/dir --boot --link-journal=guest"

Expected result: A VM is started with the journal in guest mode.

Actual result: The VM is not started, systemd-nspawn stops responding. I need kill -9 to stop the systemd-nspawn.

The order of host/guest mode is not important.

The problem persists till /var/log/journal/{VM_machine_id} is deleted.
Comment 1 Djalal Harouni 2014-04-10 00:24:20 UTC
Hi Tobias,

Thank you for reporting, I'm able to reproduce and I've located the problem!

There is also another bug that keeps systemd-nspawn blocking, thus the kill -9

I'll send patches to the mailing list

Thanks.
Comment 2 Djalal Harouni 2014-04-11 00:49:20 UTC
I've just posted patches:

http://lists.freedesktop.org/archives/systemd-devel/2014-April/018596.html

systemd-nspawn should be able to terminate cleanly on errors, for the bind mount I'm not sure we'll see what others think!

Thanks.
Comment 3 Zbigniew Jedrzejewski-Szmek 2014-05-25 04:58:56 UTC
Patch applied as http://cgit.freedesktop.org/systemd/systemd/commit/?id=e866af3a. The issue seems fixed in my testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.